--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-This code is under the creative commons license.
+This code is under the creative commons license.http://creativecommons.org/licenses/by/3.0/
